--- a/src/html/panel.html
+++ b/src/html/panel.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>开发工具集</title>
+  <title>开发者工具集</title>
   <link rel="stylesheet" href="../css/panel.css">
 </head>
 <body>
   <div class="container">
     <div class="header">
-      <h1>开发工具集</h1>
+      <h1>开发者工具集</h1>
       <div class="controls">
         <!-- 全局控制按钮放在这里 -->
       </div>
@@ -20,8 +20,8 @@
       <div class="sidebar">
         <div class="tool-nav">
           <button class="nav-button active" data-tool="json-formatter">JSON 格式化</button>
-          <button class="nav-button" data-tool="http-recorder">HTTP 请求记录</button>
-          <button class="nav-button" data-tool="ai-api-tester">AI api测试</button>
+          <!-- <button class="nav-button" data-tool="http-recorder">HTTP 请求记录</button> -->
+          <button class="nav-button" data-tool="ai-api-tester">AI API测试</button>
           <!-- 未来可以在这里添加更多工具按钮 -->
         </div>
       </div>
@@ -49,7 +49,7 @@
               </div>
               <div class="json-output-container">
                 <h3>格式化结果</h3>
-                <pre id="json-output"></pre>
+                <pre id="json-output" class="result-output"></pre>
               </div>
             </div>
           </div>
@@ -202,7 +202,7 @@
         <div class="tool-panel" id="ai-api-tester-tool">
           <div class="ai-tester-container">
             <div class="ai-tester-header">
-              <h2>AI api测试工具</h2>
+              <h2>AI API测试工具</h2>
               <div class="button-group">
                 <button id="send-api-request" class="primary-button">发送请求</button>
                 <button id="clear-api-form" class="secondary-button">清空</button>
@@ -320,6 +320,10 @@
     </div>
   </div>
   
+  <!-- 添加通知系统脚本（放在其他脚本之前） -->
+  <script src="../js/notifications.js"></script>
+  
+  <!-- 引入其他脚本 -->
   <script src="../js/panel.js"></script>
   <script src="../js/json-formatter.js"></script>
   <script src="../js/ai-api-tester.js"></script>
